# AIassignment2

./: CMakeLists.txt  facerec.cpp  report.docx
